Signed-off-by: Gabrielor260 <gabrieloliveira124049@gmail.com>

--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/media-query.css">
     <title>Login</title>
 </head>
 <body>
-    <section>
-        <h1>Cadê porra</h1>
-        <div>
-            foto
-        </div>
-        <div>
-
-        </div>
-    </section>
+    <main>
+        <section id="login">
+            <div id="imagem">
+            </div>
+            <div id="text">
+                <p>Bem-vindo</p> <br>
+                <p>inscreva-se aqui</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
