--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
             <div id="text">
                 <p>Bem-vindo</p> <br>
-                <p>inscreva-se aqui</p>
+                <p>inscreva-se aqui já</p>
             </div>
             <h1>Login</h1>
         </section>
